--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -99,8 +99,8 @@
   <!-- Inline config (injected by Vercel edge config or a static build script) -->
   <script>
     // These values are PUBLIC — safe to embed (RLS enforces all access)
-    window.SUPABASE_URL = "%%SUPABASE_URL%%";
-    window.SUPABASE_ANON_KEY = "%%SUPABASE_ANON_KEY%%";
+    window.SUPABASE_URL = "https://zaxycvrbdzkptjzrcxel.supabase.co";
+    window.SUPABASE_ANON_KEY = "sb_publishable_HkiBzidTPAxdNWuQMa-Lgw_E-sieyPx";
   </script>
 
   <script src="/js/supabase-init.js"></script>
