--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -30,8 +30,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
   <script>
-    window.SUPABASE_URL = "%%SUPABASE_URL%%";
-    window.SUPABASE_ANON_KEY = "%%SUPABASE_ANON_KEY%%";
+    window.SUPABASE_URL = "https://zaxycvrbdzkptjzrcxel.supabase.co";
+    window.SUPABASE_ANON_KEY = "sb_publishable_HkiBzidTPAxdNWuQMa-Lgw_E-sieyPx";
   </script>
   <script src="/js/supabase-init.js"></script>
   <script src="/js/auth.js"></script>
