--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
     <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.png" alt="WHITELINEZ" /></a>
     <h1>Sign In</h1>
 
-    <form id="login-form" onsubmit="handleLogin(event)">
+    <form id="login-form">
       <div class="field">
         <label for="email">Email</label>
         <input id="email" type="email" autocomplete="email" required />
@@ -29,38 +29,9 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
-  <script>
-    window.SUPABASE_URL = "https://zaxycvrbdzkptjzrcxel.supabase.co";
-    window.SUPABASE_ANON_KEY = "sb_publishable_HkiBzidTPAxdNWuQMa-Lgw_E-sieyPx";
-  </script>
+  <script src="/js/config.js"></script>
   <script src="/js/supabase-init.js"></script>
   <script src="/js/auth.js"></script>
-  <script>
-    // Redirect if already logged in
-    Auth.getSession().then(s => {
-      if (s) window.location.href = "/account.html";
-    });
-
-    async function handleLogin(e) {
-      e.preventDefault();
-      const errorEl = document.getElementById("auth-error");
-      const btn = document.getElementById("submit-btn");
-      errorEl.textContent = "";
-      btn.disabled = true;
-      btn.textContent = "Signing in...";
-
-      try {
-        await Auth.login(
-          document.getElementById("email").value,
-          document.getElementById("password").value
-        );
-        window.location.href = "/account.html";
-      } catch (err) {
-        errorEl.textContent = err.message || "Login failed";
-        btn.disabled = false;
-        btn.textContent = "Sign In";
-      }
-    }
-  </script>
+  <script src="/js/login-init.js"></script>
 </body>
 </html>
