--- a/public/account.html
+++ b/public/account.html
@@ -13,7 +13,7 @@
     <nav>
       <a href="/index.html">Live</a>
       <a href="/account.html" class="active">Account</a>
-      <button onclick="Auth.logout()">Logout</button>
+      <button id="btn-logout">Logout</button>
     </nav>
   </header>
 
