--- a/public/admin.html
+++ b/public/admin.html
@@ -22,7 +22,7 @@
     <!-- Line draw tool -->
     <section class="admin-section">
       <h2>Count Line Editor</h2>
-      <p class="admin-hint">Click two points on the live feed to define the counting line. Vehicles crossing this line will be tracked by the AI.</p>
+      <p class="admin-hint">Click 4 points on the live feed to define the counting zone. Vehicles inside this area will be counted by the AI. Click in order: top-left → top-right → bottom-right → bottom-left.</p>
 
       <div class="stream-canvas-wrapper">
         <video id="admin-video" muted playsinline autoplay></video>
@@ -48,8 +48,8 @@
               <option value="vehicle_type">Vehicle Type Leader</option>
             </select>
           </div>
-          <div class="field">
-            <label for="threshold">Threshold (for Over/Under)</label>
+          <div class="field" id="threshold-field">
+            <label for="threshold">Vehicle Threshold</label>
             <input id="threshold" type="number" min="1" value="20" />
           </div>
         </div>
@@ -59,14 +59,24 @@
             <input id="opens-at" type="datetime-local" required />
           </div>
           <div class="field">
-            <label for="closes-at">Closes At</label>
+            <label for="closes-at">Bets Close At</label>
             <input id="closes-at" type="datetime-local" required />
           </div>
           <div class="field">
-            <label for="ends-at">Ends At</label>
+            <label for="ends-at">Round Ends At</label>
             <input id="ends-at" type="datetime-local" required />
           </div>
         </div>
+
+        <!-- Live guardrail preview -->
+        <div id="round-preview" class="round-preview hidden">
+          <div class="preview-row"><span>Duration</span><strong id="prev-duration">—</strong></div>
+          <div class="preview-row"><span>Current zone avg</span><strong id="prev-rate">loading...</strong></div>
+          <div class="preview-row" id="prev-expected-row"><span>Expected total</span><strong id="prev-expected">—</strong></div>
+          <div id="prev-warning" class="preview-warning hidden"></div>
+          <div id="prev-ok" class="preview-ok hidden">✓ Round looks competitive</div>
+        </div>
+
         <p id="round-error" class="auth-error" role="alert"></p>
         <p id="round-success" class="auth-success" role="status"></p>
         <button type="submit" class="btn-primary" id="round-submit-btn">Create Round</button>
