--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,7 @@
   <script src="/js/markets.js"></script>
   <script src="/js/bet.js"></script>
 
+  <script src="/js/coord-utils.js"></script>
   <script src="/js/zone-overlay.js"></script>
   <script src="/js/detection-overlay.js"></script>
   <script src="/js/index-init.js"></script>
