--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,18 @@
   <header class="site-header">
     <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.png" alt="WHITELINEZ" /></a>
     <nav>
-      <a href="/index.html" class="active">Live</a>
       <span id="nav-balance" class="nav-balance hidden"></span>
       <span id="nav-auth">
-        <a href="/login.html">Login</a>
-        <a href="/register.html" class="btn-primary">Register</a>
+        <a href="/login.html" class="nav-link">Login</a>
+        <a href="/register.html" class="btn-nav-register">Register</a>
       </span>
       <span id="nav-user" class="hidden">
-        <a href="/account.html">Account</a>
-        <button id="btn-logout">Logout</button>
+        <a href="/account.html" class="nav-icon-btn" title="Account">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="8" r="4"/><path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"/></svg>
+        </a>
+        <button id="btn-logout" class="nav-icon-btn nav-icon-logout" title="Logout">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
+        </button>
       </span>
     </nav>
   </header>
@@ -172,6 +175,7 @@
   <script src="/js/supabase-init.js"></script>
   <script src="/js/auth.js"></script>
   <script src="/js/stream.js"></script>
+  <script src="/js/counter.js"></script>
   <script src="/js/coord-utils.js"></script>
   <script src="/js/zone-overlay.js"></script>
   <script src="/js/detection-overlay.js"></script>
