--- a/public/admin.html
+++ b/public/admin.html
@@ -9,7 +9,7 @@
 <body class="dark">
 
   <header class="site-header">
-    <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.png" alt="WHITELINEZ" /></a>
+    <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.svg" alt="WHITELINEZ" /></a>
     <span class="admin-badge">ADMIN</span>
     <nav>
       <a href="/index.html">Public View</a>
