--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
   <!-- Header -->
   <header class="site-header">
-    <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.png" alt="WHITELINEZ" /></a>
+    <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.svg" alt="WHITELINEZ" /></a>
     <nav>
       <span id="nav-balance" class="nav-balance hidden"></span>
       <span id="nav-auth">
