--- a/public/account.html
+++ b/public/account.html
@@ -9,7 +9,7 @@
 <body class="dark">
 
   <header class="site-header">
-    <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.png" alt="WHITELINEZ" /></a>
+    <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.svg" alt="WHITELINEZ" /></a>
     <nav>
       <a href="/index.html">Live</a>
       <a href="/account.html" class="active">Account</a>
