--- a/public/register.html
+++ b/public/register.html
@@ -9,7 +9,7 @@
 <body class="dark auth-page">
 
   <div class="auth-card">
-    <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.png" alt="WHITELINEZ" /></a>
+    <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.svg" alt="WHITELINEZ" /></a>
     <h1>Create Account</h1>
 
     <form id="reg-form">
