--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WHITELINEZ - Live Traffic Betting</title>
+  <title>WHITELINEZ — Live Traffic Betting</title>
   <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body class="dark">
@@ -38,27 +38,24 @@
         <canvas id="zone-canvas" class="zone-overlay"></canvas>
 
         <div id="play-overlay" class="play-overlay hidden">
-          <button id="btn-play">
-            <svg class="ui-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M8 5v14l11-7z" fill="currentColor"></path></svg>
-            <span>Play</span>
-          </button>
+          <button id="btn-play">▶ Play</button>
         </div>
 
         <div class="stream-badge">
-          <span class="dot live-dot"></span> LIVE - Kingston Traffic
+          <span class="dot live-dot"></span> LIVE — Kingston Traffic
         </div>
 
         <!-- Floating count widget -->
         <div id="count-widget" class="count-widget">
           <div class="count-widget-total">
-            <span id="cw-total">-</span>
+            <span id="cw-total">—</span>
             <span class="cw-label">vehicles</span>
           </div>
           <div class="count-widget-breakdown">
-            <span class="cw-item"><svg class="veh-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M5 12l1.3-3.5A2 2 0 0 1 8.2 7h7.7a2 2 0 0 1 1.9 1.5L19 12h1a1 1 0 0 1 1 1v2h-1a2 2 0 0 1-4 0H9a2 2 0 0 1-4 0H4v-2a1 1 0 0 1 1-1z" fill="currentColor"/></svg><strong id="cw-cars">-</strong></span>
-            <span class="cw-item"><svg class="veh-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 13V9a2 2 0 0 1 2-2h7v6H3zm10-6h4.5a2 2 0 0 1 1.7.95L21 11v2h-8V7zM4 15h1a2 2 0 0 0 4 0h6a2 2 0 0 0 4 0h2v2h-1a2 2 0 0 1-4 0H9a2 2 0 0 1-4 0H4v-2z" fill="currentColor"/></svg><strong id="cw-trucks">-</strong></span>
-            <span class="cw-item"><svg class="veh-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v7h1v2h-1a2 2 0 0 1-4 0H9a2 2 0 0 1-4 0H4a1 1 0 0 1-1-1V8z" fill="currentColor"/></svg><strong id="cw-buses">-</strong></span>
-            <span class="cw-item"><svg class="veh-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M5 15.5A3.5 3.5 0 1 1 8.5 19 3.5 3.5 0 0 1 5 15.5zm7 0A3.5 3.5 0 1 1 15.5 19 3.5 3.5 0 0 1 12 15.5zM9 9h5.7l2.6 2.8-.9.8H9V9zM8 8h1v5H7V9a1 1 0 0 1 1-1z" fill="currentColor"/></svg><strong id="cw-motos">-</strong></span>
+            <span class="cw-item">🚗 <strong id="cw-cars">—</strong></span>
+            <span class="cw-item">🚛 <strong id="cw-trucks">—</strong></span>
+            <span class="cw-item">🚐 <strong id="cw-buses">—</strong></span>
+            <span class="cw-item">🏍 <strong id="cw-motos">—</strong></span>
           </div>
           <div id="cw-ws-dot" class="cw-ws-dot cw-ws-err"></div>
         </div>
@@ -66,7 +63,7 @@
         <!-- Round timing strip on video -->
         <div id="round-strip" class="round-strip hidden">
           <span id="rs-badge" class="rs-badge">OPEN</span>
-          <span id="rs-timer" class="rs-timer">-</span>
+          <span id="rs-timer" class="rs-timer">—</span>
         </div>
       </div>
     </section>
@@ -109,10 +106,7 @@
 
       <!-- Bet panel (slides over sidebar content) -->
       <div id="bet-panel" class="bet-panel hidden">
-        <button id="bet-panel-back" class="bet-panel-back">
-          <svg class="ui-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M15 6l-6 6 6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path></svg>
-          <span>Back</span>
-        </button>
+        <button id="bet-panel-back" class="bet-panel-back">← Back</button>
         <h3 id="bp-title">Exact Count Bet</h3>
         <p id="bp-market-label" class="bp-market-label"></p>
 
@@ -120,10 +114,10 @@
           <label>Vehicle Type</label>
           <div class="bp-pills" id="bp-vehicle-pills">
             <button class="pill active" data-val="">All</button>
-            <button class="pill" data-val="car"><svg class="pill-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M5 12l1.3-3.5A2 2 0 0 1 8.2 7h7.7a2 2 0 0 1 1.9 1.5L19 12h1a1 1 0 0 1 1 1v2h-1a2 2 0 0 1-4 0H9a2 2 0 0 1-4 0H4v-2a1 1 0 0 1 1-1z" fill="currentColor"/></svg><span>Car</span></button>
-            <button class="pill" data-val="truck"><svg class="pill-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 13V9a2 2 0 0 1 2-2h7v6H3zm10-6h4.5a2 2 0 0 1 1.7.95L21 11v2h-8V7zM4 15h1a2 2 0 0 0 4 0h6a2 2 0 0 0 4 0h2v2h-1a2 2 0 0 1-4 0H9a2 2 0 0 1-4 0H4v-2z" fill="currentColor"/></svg><span>Truck</span></button>
-            <button class="pill" data-val="bus"><svg class="pill-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 8a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v7h1v2h-1a2 2 0 0 1-4 0H9a2 2 0 0 1-4 0H4a1 1 0 0 1-1-1V8z" fill="currentColor"/></svg><span>Bus</span></button>
-            <button class="pill" data-val="motorcycle"><svg class="pill-icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M5 15.5A3.5 3.5 0 1 1 8.5 19 3.5 3.5 0 0 1 5 15.5zm7 0A3.5 3.5 0 1 1 15.5 19 3.5 3.5 0 0 1 12 15.5zM9 9h5.7l2.6 2.8-.9.8H9V9zM8 8h1v5H7V9a1 1 0 0 1 1-1z" fill="currentColor"/></svg><span>Moto</span></button>
+            <button class="pill" data-val="car">🚗 Car</button>
+            <button class="pill" data-val="truck">🚛 Truck</button>
+            <button class="pill" data-val="bus">🚐 Bus</button>
+            <button class="pill" data-val="motorcycle">🏍 Moto</button>
           </div>
         </div>
 
@@ -141,7 +135,7 @@
         <div class="bp-field">
           <label for="bp-count">Exact Count</label>
           <div class="bp-count-row">
-            <button class="btn-count-adj" id="bp-count-minus">-</button>
+            <button class="btn-count-adj" id="bp-count-minus">−</button>
             <input id="bp-count" type="number" min="0" max="999" value="5" />
             <button class="btn-count-adj" id="bp-count-plus">+</button>
           </div>
@@ -154,7 +148,7 @@
 
         <div class="bp-payout-row">
           <span>Payout at 8x</span>
-          <strong id="bp-payout">-</strong>
+          <strong id="bp-payout">—</strong>
         </div>
 
         <p id="bp-error" class="bp-error" role="alert"></p>
@@ -163,7 +157,7 @@
         <div id="bp-active-bet" class="bp-active-bet hidden">
           <div class="bp-active-inner">
             <span class="bp-active-label">Resolving in</span>
-            <strong id="bp-countdown" class="bp-countdown">-</strong>
+            <strong id="bp-countdown" class="bp-countdown">—</strong>
           </div>
         </div>
       </div>
