--- a/public/account.html
+++ b/public/account.html
@@ -11,8 +11,12 @@
   <header class="site-header">
     <a href="/index.html" class="logo"><img src="/img/whitelinezlogo.svg" alt="WHITELINEZ" /></a>
     <nav>
+      <a id="account-nav-admin" href="/admin.html" class="hidden">Admin</a>
       <a href="/index.html">Live</a>
       <a href="/account.html" class="active">Account</a>
+      <span class="nav-icon-btn" title="Profile">
+        <img id="account-header-avatar" class="nav-avatar" alt="Profile" />
+      </span>
       <button id="btn-logout">Logout</button>
     </nav>
   </header>
