--- a/public/admin.html
+++ b/public/admin.html
@@ -160,6 +160,14 @@
         </div>
       </section>
 
+      <!-- Recent bets -->
+      <section class="admin-section">
+        <h2>Recent Bets</h2>
+        <div id="recent-bets" class="rounds-list">
+          <p class="loading">Loading...</p>
+        </div>
+      </section>
+
     </div>
   </div>
 
