--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,9 @@
         <a href="/register.html" class="btn-nav-register">Register</a>
       </span>
       <span id="nav-user" class="hidden">
+        <a id="nav-admin-link" href="/admin.html" class="nav-link hidden">Admin</a>
         <a href="/account.html" class="nav-icon-btn" title="Account">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="8" r="4"/><path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"/></svg>
+          <img id="nav-avatar" class="nav-avatar" alt="Profile" />
         </a>
         <button id="btn-logout" class="nav-icon-btn nav-icon-logout" title="Logout">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="16 17 21 12 16 7"/><line x1="21" y1="12" x2="9" y2="12"/></svg>
