--- a/public/admin.html
+++ b/public/admin.html
@@ -137,6 +137,13 @@
           <div id="ml-usage" class="rounds-list" style="margin-top:10px;">
             <p class="loading">Loading training usage...</p>
           </div>
+          <div id="ml-capture-log" class="rounds-list" style="margin-top:10px;">
+            <p class="loading">Loading live capture logs...</p>
+          </div>
+          <div class="ml-control-actions" style="margin-top:8px;">
+            <button id="btn-copy-capture-error" class="btn-secondary" type="button">Copy Latest Upload Error</button>
+            <span id="ml-capture-copy-msg" class="muted"></span>
+          </div>
         </div>
       </section>
 
